# python-ml

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
mltrainer/: __main__.py  cli.py
mltrainer/core/: dataset.py  downloader.py  evaluator.py  model_registry.py  optimizer.py  storage.py  trainer.py
mltrainer/ui/: console.py
