[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mltrainer"
version = "0.1.0"
description = "CLI for training, comparing, and optimizing models for the bundled datasets."
requires-python = ">=3.12"
dependencies = [
  "colorama>=0.4.6",
  "joblib>=1.4.2",
  "kaggle>=1.7.4.5",
  "pandas>=2.2.2",
  "rich>=13.7.1",
  "scikit-learn>=1.5.0",
]

[project.scripts]
mltrainer = "mltrainer.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mltrainer*"]
